# NovaWM

./: CMakeLists.txt  README.md
include/: novawm.h
src/: config.c  input.c  layout.c  main.c  manage.c  util.c  x11.c
